# crawlee_python_example

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/afs_crawlee/: constants.py  input_data.py  main.py  router.py
src/afs_crawlee/custom_crawler/: __init__.py  custom_context.py  custom_crawler.py  types.py
src/afs_crowlee/: constants.py  main.py  router.py
src/afs_crowlee/custom_crawler/: custom_crawler.py
